apps/n8n/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  labels:
    app: n8n
    app.kubernetes.io/instance: n8n-prd
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: n8n
    app.kubernetes.io/part-of: n8n
    homelab.local/OwnedBy: ElPoshoX
spec:
  selector:
    app: n8n
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: n8n
    homelab.local/OwnedBy: ElPoshoX
  ports:
  - name: speedtest
    protocol: TCP
    port: 80
    targetPort: 5678
  internalTrafficPolicy: Cluster
