apps/n8n/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`n8n.elposhox.dev`)
    services:
    - kind: Service
      name: n8n
      port: 80
